data/derived/comb/progs/unify/prog2258.ml.out
Characters 78-111:
  else (num/10, (num mod 10) :: newList);;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
